# first-sem-project-backend

./: app.py  data.json  pyproject.toml  requirements.txt  standardized_scholarships.json
instance/: data.db
migrations/versions/: fb0ba2577363_migration.py
