[project]
name = "new-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-cors>=6.0.0",
    "flask-jwt-extended>=4.7.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "imblearn>=0.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
]
